<resources>
    <string name="app_name">Study Buddy</string>
    <string name="search_title">Find a Buddy</string>
    <string name="search_button">search</string>
    <string name="add_profile_button">add profile</string>
    <string name="search_subject_edit">Subject</string>
    <string name="search_level_edit">Level</string>
    <string name="search_class_edit">Class</string>
    <string name="search_distance_edit">Distance (miles)</string>
    <string name="add_profile_title">Add a Profile</string>
    <string name="result_title">Study Buddies</string>
    <string name="result_search_info">Subject, Level, Class, Distance</string>
    <string name="result_username">username</string>
    <string name="result_distance">distance</string>
    <string name="result_subject">subject</string>
    <string name="result_level">level</string>
    <string name="result_class">class</string>
    <string name="result_buddy_image_description">This is the image of buddy setting</string>
    <string name="detail_title_username">Username</string>
    <string name="detail_subject">- Subject: NA</string>
    <string name="detail_level">- Level: NA</string>
    <string name="detail_class">- Class: NA</string>
    <string name="result_image_description">result_image_description</string>
    <string name="search_quote">We should not only use the brains we have but all that we can borrow.</string>
    <string name="search_quote_author">- Woodrow Wilson</string>
    <string name="interest_title_username">Edit Your Interests</string>
    <string name="add_title">Add a New Interest</string>
    <string name="interest_add_level_edit">Level (not required)</string>
    <string name="interest_add_class_edit">Class (not required)</string>
    <string name="interest_add_quote">An investment in knowledge pays the best interest.</string>
    <string name="Interest_add_quote_author">- Benjamin Franklin</string>
    <string name="menu_edit">edit_menu</string>
    <string name="menu_search">search_menu</string>
    <string name="user_search_result">User Search Result</string>
    <string name="buddy_list_search">Your Buddy List</string>

    <string-array name="subject_array">
        <item>Computer Science</item>
        <item>History</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Art History</item>
        <item>Math</item>
        <item>English</item>
    </string-array>

    <string-array name="level_array">
        <item>Graduate</item>
        <item>Undergrad</item>
        <item>High School</item>
        <item>Technical School</item>
    </string-array>

</resources>
