<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_subject"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/detail_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_level"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        />

    <TextView
        android:id="@+id/detail_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_class"
        android:textSize="25sp"
        android:layout_marginLeft="80dp"
        />

</LinearLayout>