<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="60dp"

    >

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/no_image"
        android:contentDescription="@string/result_image_description"
        android:layout_gravity="center"

        />

    <TextView
        android:id="@+id/result_username"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/result_username"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"

        />

    <TextView
        android:id="@+id/result_distance"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:text="@string/result_distance"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:textColor="@color/orangeLight"
        />



    <ImageView
        android:id="@+id/result_buddy_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/no_image"
        android:contentDescription="@string/result_buddy_image_description"

        />


</LinearLayout>