<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/interests_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail_subject"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/interests_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/black"
        android:hint="@string/detail_level"
        android:textColorHint="@android:color/black"
        />

    <TextView
        android:id="@+id/interests_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginLeft="80dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:hint="@string/detail_class"
        android:textStyle="italic"
        />

</LinearLayout>