<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="starace.learn.com.studybuddy.SearchActivity"
    android:orientation="vertical"
    android:fillViewport="true"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginTop="40dp"
            android:textAllCaps="true"
            />

        <AutoCompleteTextView
            android:id="@+id/interest_add_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/search_subject_edit"
            android:textColorHint="@color/greenLight"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:completionThreshold="1"
            />

        <AutoCompleteTextView
            android:id="@+id/interest_add_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/interest_add_level_edit"
            android:textColorHint="@color/greenLight"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:completionThreshold="1"
            />

        <EditText
            android:id="@+id/interest_add_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/interest_add_class_edit"
            android:textColorHint="@color/greenLight"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/interest_add_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/plus_circle"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/interest_add_quote"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/greenDark"
            android:layout_marginTop="20dp"
            android:background="@color/orangeLight"
            android:layout_gravity="bottom"
            android:textStyle="italic"
            android:paddingTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Interest_add_quote_author"
            android:textSize="12sp"
            android:textColor="@color/greenDark"
            android:background="@color/orangeLight"
            android:textAlignment="viewEnd"
            android:paddingEnd="30dp"
            />


    </LinearLayout>



</ScrollView>
